--- a/index.html
+++ b/index.html
@@ -77,15 +77,17 @@
 
     <section id="contact">
         <h2>Contactez-nous</h2>
-        <p>Pour plus d'informations ou pour commander Garçon !, veuillez nous contacter :</p>
+        <br>
+        <p class="texte_contact">Pour plus d'informations ou pour commander Garçon !, veuillez nous contacter :</p>
+        <br>
         <address>
-            Email : <a href="mailto:info@garcon-restaurant.com">info@garcon-restaurant.com</a><br>
-            Téléphone : +33 123 456 789
+            Email : <a href="mailto:info@garcon-restaurant.com">garcon.projet@gmail.com</a><br>
+            Téléphone : +33 650 095 563 ou +33 638 032 464
         </address>
     </section>
 
     <footer>
-        <p>&copy; 2024 Garçon ! - Carte de Restaurant Connectée. Tous droits réservés.</p>
+        <p class="footer-text">&copy; 2024 Garçon ! - Carte de Restaurant Connectée. Tous droits réservés.</p>
     </footer>  
 
 </body>
